my-app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app
  labels:
    app: express-app
spec:
  ports:
    - port: 3000
  selector:
    app: express-app
  clusterIP: None
