my-app/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
  clusterIP: None
