my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.test.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-app
            port:
              number: 3000
